--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar-scanner.bat
--D"sonar.projectKey=Chaitanya-enterprise_SonarTest" 
--D"sonar.sources=." 
--D"sonar.host.url=https://sonarqube-it05-lb.infoblox.com" 
--D"sonar.login=7367931232566ccc580d8afac74867f224254477"
+
+sonar.projectKey=Chaitanya-enterprise_SonarTest
+sonar.sources=.
+sonar.host.url=https://sonarqube-it05-lb.infoblox.com
+sonar.login=7367931232566ccc580d8afac74867f224254477
